# sanitize-git-ref

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
examples/: basic.rs
src/: error.rs  lib.rs
