[package]
name = "sanitize-git-ref"
version = "0.0.0-semantically-released"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "Sanitize git refs"
readme = "README.md"
homepage = "https://github.com/EricCrosson/sanitize-git-ref"
repository = "https://github.com/EricCrosson/sanitize-git-ref"
keywords = ["sanitize", "git", "ref"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sanitize_git_ref"
path = "src/lib.rs"

[dependencies]
lazy_static = "=1.4.0"
regex = "=1.6.0"
thiserror = "=1.0.37"

[dev-dependencies]
proptest = "=1.0.0"
proptest-derive = "=0.3.0"
